--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,4 +1,4 @@
-SRCS = get_next_line.c get_next_line_utils.c ft_split.c ft_strlennl.c ft_strslen.c ft_strccpy.c ft_strscpy.c ft_itoa.c ft_freemap.c ft_freestrs.c ft_realloc.c ft_printf.c ft_printf_funcs.c ft_exitmsg.c
+SRCS = ft_strcmp.c free_strs.c get_next_line.c get_next_line_utils.c ft_split.c ft_strlennl.c ft_strslen.c ft_strccpy.c ft_strscpy.c ft_itoa.c ft_freemap.c ft_freestrs.c ft_realloc.c ft_printf.c ft_printf_funcs.c ft_exitmsg.c
 OBJS = ${SRCS:.c=.o}
 NAME = libft.a
 LIBC = ar rcs
@@ -12,7 +12,7 @@ all: ${NAME}
 	${CC} ${CFLAGS} -c $< -o ${<:.c=.o}
 
 ${NAME}: ${OBJS}
-	${LIBC} ${NAME} ${OBJS}
+	${LIBC} ${NAME} ${OBJS} 
 
 clean:
 	${RM} ${OBJS}
